[gd_scene load_steps=7 format=2]

[ext_resource path="res://models/Hull_base_yellow.png" type="Texture" id=1]
[ext_resource path="res://models/Buoy_hull.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/camera_animation.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "move_camera_down"
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimationPlayer/camera_pivot/camera_base:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=3]
resource_name = "move_camera_up"
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimationPlayer/camera_pivot/camera_base:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[node name="Hull" type="Spatial"]

[node name="Buoy_hull" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Buoy_hull"]
anims/move_camera_down = SubResource( 2 )
anims/move_camera_up = SubResource( 3 )
script = ExtResource( 3 )

[node name="camera_pivot" type="Spatial" parent="Buoy_hull/AnimationPlayer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )

[node name="camera_base" type="Spatial" parent="Buoy_hull/AnimationPlayer/camera_pivot"]

[node name="camera" type="Camera" parent="Buoy_hull/AnimationPlayer/camera_pivot/camera_base"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[connection signal="animation_finished" from="Buoy_hull/AnimationPlayer" to="Buoy_hull/AnimationPlayer" method="_animation_finished"]
